# zipguard

./: .gitignore  README.md  SECURITY.md  pyproject.toml
src/safe_extract/: __init__.py  cli.py  extractor.py  policy.py
src/safe_extract/formats/: base.py  zip.py
src/safe_extract/validators/: content.py  resource.py
src/zipguard/: __init__.py  audit.py  cli.py  extractor.py
src/zipguard/formats/: base.py  zip.py
src/zipguard/validators/: content.py  path.py  resource.py
tests/: test_extractor.py  test_validators.py
