[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zipguard"
version = "0.2.0"
description = "Security-focused archive extraction tool with policy enforcement"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["security", "archive", "zip", "extraction", "zip-slip", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
zipguard = "zipguard.cli:main"

[project.urls]
Homepage = "https://github.com/Mhacker1020/zipguard"
Repository = "https://github.com/Mhacker1020/zipguard"
Issues = "https://github.com/Mhacker1020/zipguard/issues"
Blog = "https://hivesecurity.gitlab.io"

[tool.hatch.build.targets.wheel]
packages = ["src/zipguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"
